# Market-Analyse

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Africa.html  Makefile  README.md  hello.py  page.html  pyproject.toml  setup.py
.github/workflows/: ci.yml
Examples/: config.yml  llm_docs.ipynb
Examples_usage/: ollama_usage.ipynb
config/: config.toml  config.yaml  llm_service.toml  llm_service.yaml
docs/: Africa.md  ProjectIdea.md  project_roadmap.md
docs/docs/: llm_service.md  loggin.md
docs/draft/: project_roadmap.md  roadmap-v2.md  tests_cmd.md
enterprise_ai/: __init__.py  config.py  constants.py  exceptions.py  llm.py  logger.py  schema.py  version.py
enterprise_ai/default_configs/: config.example.toml  config.example.yaml
enterprise_ai/llm/: __init__.py  base.py  cache.py  exceptions.py  image.py  retry.py  service.py  utils.py
enterprise_ai/llm/providers/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py
enterprise_ai/llm/service/: __init__.py  caching.py  config.py  core.py  defaults.py  metrics.py  orchestration.py  pools.py  registry.py  utils.py
enterprise_ai/tool/: __init__.py
tests/: test_config.py  test_exceptions.py  test_llm.py  test_logger.py  test_schema.py  test_version.py
