[project]
name = "enterprise-ai"
version = "0.1.0"
description = "Multi-agent artificial intelligence platform for autonomous AI teams"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "O. A. Stéphane KPOVIESSI", email = "projectsengineer6@gmail.com"},
]
keywords = ["artificial-intelligence", "agents", "multi-agent", "llm", "enterprise"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "pytest-cov>=6.0.0",
    "tomli>=2.2.1",
    "types-pyyaml>=6.0.12.20241230",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["enterprise_ai"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501", "F401"]
per-file-ignores = { "tests/*" = ["E501"] }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.3",
]
